integrating backend to frontend

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,8 +1,6 @@
 $primary: #937dc2;
 $secondary: #ac9ba6;
-$danger: #ffabe1;
-$success: #38e54d;
-$warning: #ffff00;
+$danger: #fa76cc;
 
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
